Added some new tags and some other cleanup